# docker-python-mecab-base

./: pyproject.toml
Docker/: docker-compose.yml
Docker/python/: Dockerfile
src/: main.py
