[tool.poetry]
name = "morphological-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "morphological_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^5.10.0"
google-auth = "^2.22.0"
google = "^3.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
